apps/afterhours-stream/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: afterhours-stream
spec:
  selector:
    app: afterhours-stream
  ports:
    - name: http
      port: 80
      targetPort: http
